<resources>
    <string name="app_name">Layout</string>
    <string name="name">Tom Bruchon</string>
    <string name="Yellow_star">Yellow star</string>


    <string name="bio">
        Hi my name is Tom
        \n\n i live in geneva
        \n\n i like football
        \n\n and also i study in esig
        \n\n where i learn to code
        \n\n in kotlin
        \n\n java
        \n\n python
        \n\n and others
        \n\n shzrtsjjtdfsdgjjf
        \n\n fugggggggggggggg
        \n\n ufgfrjtghhtreihg
        \n\n fffffffffffffffffffff
        \n\n fffffffffffffffffffff
        \n\n fffffffffffffffffffff
        \n\n fffffffffffffffffffff
        \n\n fffffffffffffffffffff
        \n\n fffffffffffffffffffff

    </string>
    <string name="What_is_your_nickname">What is your Nickname?</string>
    <string name="done_button">Done</string>

</resources>